# relengy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Escolha-do-Metodo.md  Glossario.md  Interpretacao-do-Beta.md  abernethy-weibull-notes.md
examples/: README.md  case4_test_bench.py  rs401_min_durability.py
src/relengy/: __init__.py  report.py
src/relengy/io/: censoring.py
src/relengy/qualitative/: fmea.py  fta.py
src/relengy/quantitative/: alt.py  doe.py  fitting.py  growth.py  ranks.py  rbd.py
tests/: test_alt.py  test_doe.py  test_fitting.py  test_fmea.py  test_fta.py  test_growth.py  test_ranks.py  test_rbd.py  test_report.py
